prcing page icon spacing issue fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -3134,12 +3134,17 @@ padding: 10px 5px;
 }
 
 /* Style fixes */
-#pricingForm span {
-    padding-top: 10px;
+#pricingLabel {
+    padding-top: 13px;
 }
 #pricingForm a {
-    display: inline-block;
-    margin: 8px 25px 0;
+   margin: 10px 25px 0;
+}
+#pricingForm #savePricing{
+    margin-top: 15px;
+}
+#pricingForm a , #pricingForm span.k-numerictextbox{
+    float: left;
 }
 .modal-body .model_line label {
     padding-top: 6px;
